fix: text overflow in profile name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -917,6 +917,7 @@ section.profile .profile-wrapper .profile-name {
   font-size: em(22,16);
   font-weight: $semibold;
   line-height: em(30,22);
+  word-break: break-word;
 }
 section.profile .profile-wrapper .profile-since {
   color: $black-light;
